| Summary: | ASTERISK-18578: Asterisk defaults to s@default in pbx_start if extension is not found | ||||
| Reporter: | Olle Johansson (oej) | Labels: | |||
| Date Opened: | 2011-09-19 13:02:18 | Date Closed: | 2011-09-26 09:43:13 | ||
| Priority: | Critical | Regression? | No | ||
| Status: | Closed/Complete | Components: | Core/PBX | ||
| Versions: | Frequency of Occurrence | Constant | |||
| Related Issues: |
| ||||
| Environment: | All | Attachments: | |||
| Description: | If an extension is not found, asterisk defaults to extension s@default, which is wrong. "s" should *only* be used when no extension exists. This was discovered in the manager interface. Most channel drivers seems to check if the extension exists before running ast_pbx_start() on a channel, so there are propably very few cases where this functionality is used. I consider this a bug. patch is in reviewboard. | ||||
| Comments: | By: Olle Johansson (oej) 2011-09-19 13:02:50.491-0500 I suggest we change this in version 10 and implement a fix for originate in 1.8 and upwards. | ||||